# qtc-sourcetrail

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  QtCreatorSourceTrail.json.in  README.md  Sourcetrail.json.in  build.sh  qtc-sourcetrail.pro  qtcreatorsourcetrail.pro  qtcreatorsourcetrailconstants.h  qtcreatorsourcetrailplugin.cpp  qtcreatorsourcetrailplugin.h  sourcetrail.pro  sourcetrail.qrc  sourcetrail_global.h  sourcetrailconstants.h  sourcetrailplugin.cpp  sourcetrailplugin.h  sourcetrailpluginsettings.cpp  sourcetrailpluginsettings.h  sourcetrailpluginsettingspage.cpp  sourcetrailpluginsettingspage.h  sourcetrailpluginsettingspage.ui
.github/workflows/: build_cmake.yml
scripts/: before_deploy.sh  before_install.sh  before_script.sh  install.sh  osx-fix.sh  script.sh
src/: sourcetrail_global.h  sourcetrailconstants.h  sourcetrailplugin.cpp  sourcetrailplugin.h  sourcetrailpluginsettings.cpp  sourcetrailpluginsettings.h  sourcetrailpluginsettingspage.cpp  sourcetrailpluginsettingspage.h  sourcetrailpluginsettingspage.ui
